--- a/game-engine.web/src/main/resources/consoleweb-assets/stats/stats-style.css
+++ b/game-engine.web/src/main/resources/consoleweb-assets/stats/stats-style.css
@@ -35,6 +35,21 @@
     background-color: rgb(23, 178, 235);
 }
 
+.button-stats {
+    background-color: rgb(23, 178, 235);
+    border: 0;
+    border-radius: 0;
+    font-size: 18px;
+    border: 1px solid rgb(23, 178, 235);
+    transition: all 0.3s;
+}
+
+.button-stats:hover {
+    background-color: #fff;
+    color: rgb(23, 178, 235);
+    border: 1px solid rgb(23, 178, 235);
+}
+
 .v-center {
     display: flex;
     align-items: center
